[1.16] sync - libressl/signing.html

--- a/libressl/signing.html
+++ b/libressl/signing.html
@@ -19,16 +19,14 @@
 при помощи <a href="https://man.openbsd.org/signify.1">signify(1)</a>, при использовании
 открытого (public) ключа:
 <p>
-<a href="https://github.com/libressl-portable/portable/commit/c5c2aa37be6134f6552070ab21f49d53ebfe86e6">RWQg/nutTVqCUVUw8OhyHt9n51IC8mdQRd1b93dOyVrwtIXmMI+dtGFe</a>
+<a href="https://github.com/libressl-portable/portable/commit/ceeb3bb4f423db4fc29704aa5a4c577f08103194">RWT44PcJDPu8ZDd5GfXWW2vuE+xq4M3haXXfYohnEnWoEYCKHNFut6W8</a>
 
 <p>
-Они подписанны при помощи GPG, используюя этот <a href="https://ftp.openbsd.org/pub/OpenBSD/LibreSSL/libressl.asc">открытый ключ (public key)</a>.
+Они подписанны при помощи GPG, используюя
+<a href="https://ftp.openbsd.org/pub/OpenBSD/LibreSSL/libressl.asc">этот public key</a>
+(A1EB079B8D3EB92B4EBD3139663AF51BD5E4D8D5).
 
 <p>
 Подписи релизов можно проверить при помощи signify в самой OpenBSD, или при помощи 
 <a href="https://github.com/aperezdc/signify">портированной версии signify</a>,
-которая доступна в последних версиях
-<a href="https://packages.debian.org/search?keywords=signify-openbsd">Debian</a>,
-<a href="http://packages.ubuntu.com/search?keywords=signify-openbsd">Ubuntu</a> и
-<a href="https://aur.archlinux.org/packages/signify/">Arch Linux</a>, или при
-использовании GPG.
+или же при помощи GPG.
