[1.418] sync - openntpd/portable.html

--- a/openntpd/portable.html
+++ b/openntpd/portable.html
@@ -19,8 +19,8 @@
 Портированная версия OpenNTPD работает и на нескольких других UNIX
 системах, благодаря добавленной поддержке autotool и необходимого уровня
 совместимости. При этом был использован опыт, полученный при
-портировнии проектов <a href="../openssh/index.html">OpenSSH</a>
-и <a href="../libressl/index.html">LibreSSL</a>.
+портировнии <a href="../openssh/index.html">OpenSSH</a> и
+<a href="../libressl/index.html">LibreSSL</a>.
 
 <h3>Требования к системе</h3>
 
