--- a/openbgpd/ftp.html
+++ b/openbgpd/ftp.html
@@ -16,11 +16,12 @@
 <hr>
 
 <p>
-Последний релиз портированной версии OpenBGPD 6.6p0 состоялся первого ноябрая 2019 года.
+Последний релиз портированной версии OpenBGPD 6.6p0 состоялся
+первого ноябрая 2019 года.
 
 <p>
-Это OpenBGPD версия/порт для других операционных систем. Он основан на коде
-портированных версий
+Портированная OpenBGPD - это версия/порт для других операционных систем.
+Он основан на коде портированных версий
 <a href="../openntpd/index.html">OpenNTPD</a>,
 <a href="../openssh/index.html">OpenSSH</a> и
 <a href="../libressl/index.html">LibreSSL</a>.
