[1.89] update link to logging.html - faq/pf/index.html

--- a/faq/pf/index.html
+++ b/faq/pf/index.html
@@ -38,7 +38,7 @@ PF: Пакетный фильтр OpenBSD
 	</ul>
 <li>Дополнительные темы
 	<ul>
-	<li><a href="https://openbsd.org/faq/pf/logging.html">Запись в журнал (лог)</a>
+	<li><a href="logging.html">Создание и анализ log-файлов (протоколирование)</a>
 	<li><a href="perf.html"   >Производительность</a>
 	<li><a href="https://openbsd.org/faq/pf/ftp.html">Проблемы с FTP</a>
 	<li><a href="https://openbsd.org/faq/pf/authpf.html">Оболочка для аутентификации пользователей на шлюзах (authpf)</a>
