--- a/faq/index.html
+++ b/faq/index.html
@@ -215,7 +215,7 @@ OpenBSD, так и <a href="http://www.openbsd.org/cgi-bin/man.cgi">онлайн
   </ul>
 <li>Дополнительные вопросы
   <ul>
-  <li><a href="https://www.openbsd.org/faq/pf/logging.html"  >Запись в журнал (logging)</a>
+  <li><a href="pf/logging.html"                              >Создание и анализ log-файлов (протоколирование)</a>
   <li><a href="pf/perf.html"                                 >Производительность</a>
   <li><a href="https://www.openbsd.org/faq/pf/ftp.html"      >Проблемы с FTP</a>
   <li><a href="https://www.openbsd.org/faq/pf/authpf.html"   >Оболочка для аутентификации пользователей на шлюзах (authpf)</a>
