--- a/security.html
+++ b/security.html
@@ -25,6 +25,7 @@ h3 {
 Используйте ссылки ниже, если интересуетесь безопасностью конкретного релиза.
 
 <p>
+<a href="https://openbsd.org/errata20.html">2.0</a>,
 <a href="https://openbsd.org/errata21.html">2.1</a>,
 <a href="https://openbsd.org/errata22.html">2.2</a>,
 <a href="https://openbsd.org/errata23.html">2.3</a>,
@@ -40,9 +41,9 @@ h3 {
 <a href="https://openbsd.org/errata33.html">3.3</a>,
 <a href="https://openbsd.org/errata34.html">3.4</a>,
 <a href="https://openbsd.org/errata35.html">3.5</a>,
+<br>
 <a href="https://openbsd.org/errata36.html">3.6</a>,
 <a href="https://openbsd.org/errata37.html">3.7</a>,
-<br>
 <a href="https://openbsd.org/errata38.html">3.8</a>,
 <a href="https://openbsd.org/errata39.html">3.9</a>,
 <a href="https://openbsd.org/errata40.html">4.0</a>,
@@ -57,10 +58,10 @@ h3 {
 <a href="https://openbsd.org/errata49.html">4.9</a>,
 <a href="https://openbsd.org/errata50.html">5.0</a>,
 <a href="https://openbsd.org/errata51.html">5.1</a>,
+<br>
 <a href="https://openbsd.org/errata52.html">5.2</a>,
 <a href="https://openbsd.org/errata53.html">5.3</a>,
 <a href="https://openbsd.org/errata54.html">5.4</a>,
-<br>
 <a href="https://openbsd.org/errata55.html">5.5</a>,
 <a href="https://openbsd.org/errata56.html">5.6</a>,
 <a href="https://openbsd.org/errata57.html">5.7</a>,
