[1.170] sync - mail.html

--- a/mail.html
+++ b/mail.html
@@ -330,8 +330,10 @@ LibreSSL.
 
 <dt><b>mirrors-discuss@openbsd.org</b>
 <dd>Обсуждения, связанные с зеркалами OpenBSD.
-<!-- XXX need archive link -->
-
+<!-- Do not create a web archive of this list.
+     There is no benefit in looking up old posts,
+     so the only effect would be helping spammers
+     to collect mail addresses of mirror admins. -->
 </dl>
 
 <h2 id="Majordomo">Управление рассылками при помощи Majordomo</h2>
@@ -413,12 +415,6 @@ Majordomo достаточно интеллигентен, чтобы распа
 <h2 id="OtherLists">Другие почтовые рассылки</h2>
 
 <p>
-Чуваки с <a href="http://www.squish.net/openbsd/">squish.net</a>
-запустили свою рассылку с ежедневными и еженедельными обзорами изменений,
-опубликованных в <b>source-changes</b> и <b>ports-changes</b>.
-Это удобно для тех, кто не хочет получать большой объем писем из этих рассылок.
-
-<p>
 На <a href="https://www.benzedrine.ch/mailinglist.html">benzedrine.cx</a>
 есть почтовая рассылка, посвященная <b>pf</b>, для пользователей, использующих
 <a href=faq/pf/index.html>OpenBSD packet filter</a>.
@@ -435,13 +431,6 @@ Majordomo достаточно интеллигентен, чтобы распа
  PLEASE KEEP THIS LIST SORTED, EXCEPT FOR TRANSLATIONS, WHERE YOU SHOULD PUT
  THE LIST IN YOUR LANGUAGE, IF ONE EXISTS, HEAD OF LIST.
  -->
-
-<p>
-Японская рассылка:
-<b>openbsd-japan@googlegroups.com</b>
-<br>Чтобы подписаться, загляните на URL адрес:
-<a href="https://groups.google.com/group/openbsd-japan">
-https://groups.google.com/group/openbsd-japan</a>
 
 <p>
 Испанская рассылка:
