--- a/openssh/security.html
+++ b/openssh/security.html
@@ -200,6 +200,14 @@ OpenSSH разрабатывается по тем же принципам и т
     Security Advisory</a> and CERT Advisory
     <a href="http://www.cert.org/advisories/CA-2003-24.html">CA-2003-24</a>.
 
+<li><p><b>1 августа 2002:</b><br>
+    OpenSSH version 3.2.2p1, 3.4p1 and 3.4 were trojaned on the
+    OpenBSD FTP server and potentially propagated via the normal
+    mirroring process to other FTP servers.  The code was inserted
+    some time between the 30th and 31th of July.  We replaced the
+    trojaned files with their originals at 7AM MDT, August 1st:
+    <a href="https://www.openbsd.org/advisories/ssh_trojan.txt">OpenBSD Advisory</a>.
+
 <li><p><b>26 июня 2002:</b><br>
     OpenSSH 3.4 and newer are not vulnerable to
     "June 26, 2002: OpenSSH Remote Challenge Vulnerability",
