[1.811] sync - ftp.html

--- a/ftp.html
+++ b/ftp.html
@@ -28,10 +28,11 @@ OpenBSD можно скачать через HTTP(s) или FTP.
 если вам нужны подробности, касательно этого процесса.
 
 <p>
-Выберите ближайшее к вам зеркало из списка
+Выберите ближайшее к вам зеркало в списке
 <a href="https://www.openbsd.org/ftp.html#http">HTTP(s)</a>,
 <a href="https://www.openbsd.org/ftp.html#ftp">FTP</a> и
-<a href="https://www.openbsd.org/ftp.html#rsync">rsync</a> зеркал.
+<a href="https://www.openbsd.org/ftp.html#rsync">rsync</a>
+зеркал.
 
 <h3 id="layout">Структура каталогов:</h3>
 
