[1.411] sync - openbgpd/ftp.html

--- a/openbgpd/ftp.html
+++ b/openbgpd/ftp.html
@@ -56,7 +56,7 @@ style="font-family:monospace">RWTGJEPobKfXIP1+foh6O3ZGQIDIxwB0Hp4rH6fMYGdYPQMFH2
 
 <p>
 Они так же подписанны при помощи этого
-<a href="https://ftp.openbsd.org/pub/OpenBSD/OpenBGPD/openbgpd.asc">public GPG ключа</a>
+<a href="https://ftp.openbsd.org/pub/OpenBSD/OpenBGPD/openbgpd.asc">public GPG ключа</a>.
 
 <p>
 Подпись релизов может быть проверена при помощи программы signify,
