[1.569] sync - openssh/portable.html

--- a/openssh/portable.html
+++ b/openssh/portable.html
@@ -65,7 +65,7 @@
 
 <h2 id="cvs"><span id="git"></span>Разработка</h2>
 <p>
-Новейшие ночные снапшоты доступны
+Последние снапшоты (собираются каждую ночь) доступны
 <a href="https://www.mindrot.org/openssh_snap/">здесь</a>.
 Исходники портированной версии OpenSSH находятся на git-сервере:
 
