[1.420] sync - openntpd/portable.html

--- a/openntpd/portable.html
+++ b/openntpd/portable.html
@@ -49,7 +49,7 @@
 
 <p>
 На момент написания портированная версия OpenNTPD собиралась и
-работала на системах:
+работала на следующих системах:
 
 <ul>
 	<li>OpenBSD
