[1.171] sync (adding french ML) - mail.html

--- a/mail.html
+++ b/mail.html
@@ -427,10 +427,14 @@ Majordomo достаточно интеллигентен, чтобы распа
 Есть несколько неофициальных Non-English почтовых OpenBSD рассылок.
 Вот список некоторых известных нам:
 
-<!--
- PLEASE KEEP THIS LIST SORTED, EXCEPT FOR TRANSLATIONS, WHERE YOU SHOULD PUT
- THE LIST IN YOUR LANGUAGE, IF ONE EXISTS, HEAD OF LIST.
- -->
+<p>
+Французская рассылка:
+<b>blabla@openbsd.fr.eu.org</b>
+<br>Чтобы подписаться, отправьте письмо на адрес:
+<a href="mailto:blabla+subscribe@openbsd.fr.eu.org">
+blabla+subscribe@openbsd.fr.eu.org</a>
+<br>
+(<a href="https://openbsd.fr.eu.org/blabla/">Архив</a>)
 
 <p>
 Испанская рассылка:
