[1.101] sync, LibreSSL 3.1.1 - libressl/index.html

--- a/libressl/index.html
+++ b/libressl/index.html
@@ -39,7 +39,7 @@
       </h1>
 
       <p id="callout">
-        <a href="https://ftp.openbsd.org/pub/OpenBSD/LibreSSL/libressl-3.0.2-relnotes.txt">LibreSSL 3.0.2</a> вышла 19 октября 2019 года
+        <a href="https://ftp.openbsd.org/pub/OpenBSD/LibreSSL/libressl-3.1.1-relnotes.txt">LibreSSL 3.1.1</a> вышла 7 мая 2020 года
     
     <p>
     LibreSSL представляет из себя криптографический TLS-стек, возникший
@@ -55,8 +55,7 @@
     ОС (Linux, FreeBSD, Windows, и.т.д.).
 
     <p>
-    Последним stable релизом является 3.0.2.<br>
-    Последним development релизом является 3.1.0.<br>
+    Последним stable релизом является 3.1.1.<br>
     Больше информации можно найти на странице <a href="releases.html">доступных версий</a>.
 
     <p>
