[1.542] sync - faq/index.html

--- a/faq/index.html
+++ b/faq/index.html
@@ -161,6 +161,7 @@ OpenBSD, так и <a href="http://www.openbsd.org/cgi-bin/man.cgi">онлайн
 <li><a href="faq11.html#CustomizingX">Настройка X</a>
 </ul>
 
+<!-- XXXrelease needs updating for 6.7
 <h3><a href="faq13.html">Мультимедия</a></h3>
 <ul>
 <li><a href="faq13.html#confaudio"  >Конфигурация аудио устройств</a>
@@ -175,6 +176,7 @@ OpenBSD, так и <a href="http://www.openbsd.org/cgi-bin/man.cgi">онлайн
 <li><a href="faq13.html#burnCD"     >Запись CD и DVD</a>
 <li><a href="faq13.html#plugins"    >Плагины для браузера (Java и Flash)</a>
 </ul>
+-->
 
 <h3><a href="faq16.html">Виртуализация</a></h3>
 <ul>
