[1.741] sync, adding link to rpki-client - index.html

--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
       Дочерние проекты:
       <a href="openssh/index.html">OpenSSH</a>,
       <a href="openbgpd/index.html">OpenBGPD</a>,
+      <a href="rpki-client/index.html">rpki-client</a>,
       <a href="openntpd/index.html">OpenNTPD</a>,
       <a href="opensmtpd/index.html">OpenSMTPD</a>,
       <a href="openiked/index.html">OpenIKED</a>,
