--- a/faq/faq1.html
+++ b/faq/faq1.html
@@ -98,6 +98,7 @@ OpenBSD распространяется с рядом сторонних про
   <li><a href="https://www.gnu.org/software/ncurses">ncurses</a>
   <li><a href="https://www.gnu.org/software/binutils">binutils</a>
   <li><a href="https://www.gnu.org/software/gdb/gdb.html">gdb</a>
+  <li><a href="https://github.com/Yubico/libfido2">libfido2</a>
 </ul>
 
 Команда OpenBSD часто добавляет изменения в сторонние компоненты, как правило,
