[1.535] sync, OpenBSD 6.7 - faq/faq4.html

--- a/faq/faq4.html
+++ b/faq/faq4.html
@@ -119,18 +119,18 @@ boot> <b>boot hd1d:/bsd.rd</b>
 	  если вы используете одну из архитектур, отличных от x86. Они содержат
 	  подробные инструкции и предостережения:
           <p>
-[<a href="https://ftp.openbsd.org/pub/OpenBSD/6.6/alpha/INSTALL.alpha">alpha</a>]
-[<a href="https://ftp.openbsd.org/pub/OpenBSD/6.6/amd64/INSTALL.amd64">amd64</a>]
-[<a href="https://ftp.openbsd.org/pub/OpenBSD/6.6/arm64/INSTALL.arm64">arm64</a>]
-[<a href="https://ftp.openbsd.org/pub/OpenBSD/6.6/armv7/INSTALL.armv7">armv7</a>]
-[<a href="https://ftp.openbsd.org/pub/OpenBSD/6.6/hppa/INSTALL.hppa">hppa</a>]
-[<a href="https://ftp.openbsd.org/pub/OpenBSD/6.6/i386/INSTALL.i386">i386</a>]
-[<a href="https://ftp.openbsd.org/pub/OpenBSD/6.6/landisk/INSTALL.landisk">landisk</a>]
-[<a href="https://ftp.openbsd.org/pub/OpenBSD/6.6/loongson/INSTALL.loongson">loongson</a>]
-[<a href="https://ftp.openbsd.org/pub/OpenBSD/6.6/luna88k/INSTALL.luna88k">luna88k</a>]
-[<a href="https://ftp.openbsd.org/pub/OpenBSD/6.6/macppc/INSTALL.macppc">macppc</a>]
-[<a href="https://ftp.openbsd.org/pub/OpenBSD/6.6/octeon/INSTALL.octeon">octeon</a>]
-[<a href="https://ftp.openbsd.org/pub/OpenBSD/6.6/sparc64/INSTALL.sparc64">sparc64</a>]
+[<a href="https://ftp.openbsd.org/pub/OpenBSD/6.7/alpha/INSTALL.alpha">alpha</a>]
+[<a href="https://ftp.openbsd.org/pub/OpenBSD/6.7/amd64/INSTALL.amd64">amd64</a>]
+[<a href="https://ftp.openbsd.org/pub/OpenBSD/6.7/arm64/INSTALL.arm64">arm64</a>]
+[<a href="https://ftp.openbsd.org/pub/OpenBSD/6.7/armv7/INSTALL.armv7">armv7</a>]
+[<a href="https://ftp.openbsd.org/pub/OpenBSD/6.7/hppa/INSTALL.hppa">hppa</a>]
+[<a href="https://ftp.openbsd.org/pub/OpenBSD/6.7/i386/INSTALL.i386">i386</a>]
+[<a href="https://ftp.openbsd.org/pub/OpenBSD/6.7/landisk/INSTALL.landisk">landisk</a>]
+[<a href="https://ftp.openbsd.org/pub/OpenBSD/6.7/loongson/INSTALL.loongson">loongson</a>]
+[<a href="https://ftp.openbsd.org/pub/OpenBSD/6.7/luna88k/INSTALL.luna88k">luna88k</a>]
+[<a href="https://ftp.openbsd.org/pub/OpenBSD/6.7/macppc/INSTALL.macppc">macppc</a>]
+[<a href="https://ftp.openbsd.org/pub/OpenBSD/6.7/octeon/INSTALL.octeon">octeon</a>]
+[<a href="https://ftp.openbsd.org/pub/OpenBSD/6.7/sparc64/INSTALL.sparc64">sparc64</a>]
       <li>Если досуп к сети в вашем случае возможен только через wireless, узнайте
 	  заранее, требует ли ваша карта
 	  <a href="http://firmware.openbsd.org/firmware">дополнительной прошивки</a>?
@@ -166,8 +166,8 @@ boot> <b>boot hd1d:/bsd.rd</b>
 <ul>
 <li>
 <b>installXX.fs</b>
-[<a href="https://cdn.openbsd.org/pub/OpenBSD/6.6/amd64/install66.fs">amd64</a>]
-[<a href="https://cdn.openbsd.org/pub/OpenBSD/6.6/i386/install66.fs">i386</a>]
+[<a href="https://cdn.openbsd.org/pub/OpenBSD/6.7/amd64/install67.fs">amd64</a>]
+[<a href="https://cdn.openbsd.org/pub/OpenBSD/6.7/i386/install67.fs">i386</a>]
 <br>
 Образ диска, который может быть записан на USB флешку или подобное устройство.
 <br>
@@ -176,17 +176,17 @@ boot> <b>boot hd1d:/bsd.rd</b>
 <p>
 <li>
 <b>minirootXX.fs</b>
-[<a href="https://cdn.openbsd.org/pub/OpenBSD/6.6/alpha/miniroot66.fs">alpha</a>]
-[<a href="https://cdn.openbsd.org/pub/OpenBSD/6.6/amd64/miniroot66.fs">amd64</a>]
-[<a href="https://cdn.openbsd.org/pub/OpenBSD/6.6/arm64/miniroot66.fs">arm64</a>]
+[<a href="https://cdn.openbsd.org/pub/OpenBSD/6.7/alpha/miniroot67.fs">alpha</a>]
+[<a href="https://cdn.openbsd.org/pub/OpenBSD/6.7/amd64/miniroot67.fs">amd64</a>]
+[<a href="https://cdn.openbsd.org/pub/OpenBSD/6.7/arm64/miniroot67.fs">arm64</a>]
 <!-- armv7 has multiple miniroot files for different boards -->
-[<a href="https://cdn.openbsd.org/pub/OpenBSD/6.6/armv7/">armv7</a>]
-[<a href="https://cdn.openbsd.org/pub/OpenBSD/6.6/i386/miniroot66.fs">i386</a>]
-[<a href="https://cdn.openbsd.org/pub/OpenBSD/6.6/landisk/miniroot66.fs">landisk</a>]
-[<a href="https://cdn.openbsd.org/pub/OpenBSD/6.6/loongson/miniroot66.fs">loongson</a>]
-[<a href="https://cdn.openbsd.org/pub/OpenBSD/6.6/luna88k/miniroot66.fs">luna88k</a>]
-[<a href="https://cdn.openbsd.org/pub/OpenBSD/6.6/octeon/miniroot66.fs">octeon</a>]
-[<a href="https://cdn.openbsd.org/pub/OpenBSD/6.6/sparc64/miniroot66.fs">sparc64</a>]
+[<a href="https://cdn.openbsd.org/pub/OpenBSD/6.7/armv7/">armv7</a>]
+[<a href="https://cdn.openbsd.org/pub/OpenBSD/6.7/i386/miniroot67.fs">i386</a>]
+[<a href="https://cdn.openbsd.org/pub/OpenBSD/6.7/landisk/miniroot67.fs">landisk</a>]
+[<a href="https://cdn.openbsd.org/pub/OpenBSD/6.7/loongson/miniroot67.fs">loongson</a>]
+[<a href="https://cdn.openbsd.org/pub/OpenBSD/6.7/luna88k/miniroot67.fs">luna88k</a>]
+[<a href="https://cdn.openbsd.org/pub/OpenBSD/6.7/octeon/miniroot67.fs">octeon</a>]
+[<a href="https://cdn.openbsd.org/pub/OpenBSD/6.7/sparc64/miniroot67.fs">sparc64</a>]
 <br>
 Это такой же образ, как и образ выше, но файлов, содержащих установочные компоненты,
 там нет. Они могут быть во время установки системы загруженны из сети или найдены на
@@ -195,35 +195,35 @@ boot> <b>boot hd1d:/bsd.rd</b>
 <p>
 <li>
 <b>installXX.iso</b>
-[<a href="https://cdn.openbsd.org/pub/OpenBSD/6.6/alpha/install66.iso">alpha</a>]
-[<a href="https://cdn.openbsd.org/pub/OpenBSD/6.6/amd64/install66.iso">amd64</a>]
-[<a href="https://cdn.openbsd.org/pub/OpenBSD/6.6/hppa/install66.iso">hppa</a>]
-[<a href="https://cdn.openbsd.org/pub/OpenBSD/6.6/i386/install66.iso">i386</a>]
-[<a href="https://cdn.openbsd.org/pub/OpenBSD/6.6/macppc/install66.iso">macppc</a>]
-[<a href="https://cdn.openbsd.org/pub/OpenBSD/6.6/sparc64/install66.iso">sparc64</a>]
+[<a href="https://cdn.openbsd.org/pub/OpenBSD/6.7/alpha/install67.iso">alpha</a>]
+[<a href="https://cdn.openbsd.org/pub/OpenBSD/6.7/amd64/install67.iso">amd64</a>]
+[<a href="https://cdn.openbsd.org/pub/OpenBSD/6.7/hppa/install67.iso">hppa</a>]
+[<a href="https://cdn.openbsd.org/pub/OpenBSD/6.7/i386/install67.iso">i386</a>]
+[<a href="https://cdn.openbsd.org/pub/OpenBSD/6.7/macppc/install67.iso">macppc</a>]
+[<a href="https://cdn.openbsd.org/pub/OpenBSD/6.7/sparc64/install67.iso">sparc64</a>]
 <br>
-ISO 9660 образш. Используется для создания установочных CD/DVD.
+ISO 9660 образ. Используется для создания установочных CD/DVD.
 <br>
 Содержит файлы с установочными компонентами.
 
 <p>
 <li>
 <b>cdXX.iso</b>
-[<a href="https://cdn.openbsd.org/pub/OpenBSD/6.6/alpha/cd66.iso">alpha</a>]
-[<a href="https://cdn.openbsd.org/pub/OpenBSD/6.6/amd64/cd66.iso">amd64</a>]
-[<a href="https://cdn.openbsd.org/pub/OpenBSD/6.6/hppa/cd66.iso">hppa</a>]
-[<a href="https://cdn.openbsd.org/pub/OpenBSD/6.6/i386/cd66.iso">i386</a>]
-[<a href="https://cdn.openbsd.org/pub/OpenBSD/6.6/macppc/cd66.iso">macppc</a>]
-[<a href="https://cdn.openbsd.org/pub/OpenBSD/6.6/sparc64/cd66.iso">sparc64</a>]
+[<a href="https://cdn.openbsd.org/pub/OpenBSD/6.7/alpha/cd67.iso">alpha</a>]
+[<a href="https://cdn.openbsd.org/pub/OpenBSD/6.7/amd64/cd67.iso">amd64</a>]
+[<a href="https://cdn.openbsd.org/pub/OpenBSD/6.7/hppa/cd67.iso">hppa</a>]
+[<a href="https://cdn.openbsd.org/pub/OpenBSD/6.7/i386/cd67.iso">i386</a>]
+[<a href="https://cdn.openbsd.org/pub/OpenBSD/6.7/macppc/cd67.iso">macppc</a>]
+[<a href="https://cdn.openbsd.org/pub/OpenBSD/6.7/sparc64/cd67.iso">sparc64</a>]
 <br>
 Такой же образ как и образ выше, но без файлов с установочными компонентами.
 
 <p>
 <li>
 <b>floppyXX.fs</b>
-[<a href="https://cdn.openbsd.org/pub/OpenBSD/6.6/amd64/floppy66.fs">amd64</a>]
-[<a href="https://cdn.openbsd.org/pub/OpenBSD/6.6/i386/floppy66.fs">i386</a>]
-[<a href="https://cdn.openbsd.org/pub/OpenBSD/6.6/sparc64/floppy66.fs">sparc64</a>]
+[<a href="https://cdn.openbsd.org/pub/OpenBSD/6.7/amd64/floppy67.fs">amd64</a>]
+[<a href="https://cdn.openbsd.org/pub/OpenBSD/6.7/i386/floppy67.fs">i386</a>]
+[<a href="https://cdn.openbsd.org/pub/OpenBSD/6.7/sparc64/floppy67.fs">sparc64</a>]
 <br>
 Поддерживает некоторые старые машины, где отсутствуют другие возможности для загрузки.
 </ul>
@@ -260,7 +260,7 @@ minirootXX.fs: OK
 
 Обратите внимание, что пакет signify в других операционных системах может не
 содержать требуемого
-<a href="https://ftp.openbsd.org/pub/OpenBSD/6.6/openbsd-66-base.pub">открытого ключа</a>
+<a href="https://ftp.openbsd.org/pub/OpenBSD/6.7/openbsd-67-base.pub">открытого ключа</a>
 или может быть установлен в другом месте.
 
 <p>
