[1.814] sync, OpenBSD 6.7 - ftp.html

--- a/ftp.html
+++ b/ftp.html
@@ -44,7 +44,7 @@ OpenBSD можно скачать через HTTP(s) или FTP.
 	доступна коллекция FTP OpenBSD. Это может быть ссылкой, если
 	это необходимо.
 	<p>
-<li><b>/pub/OpenBSD/6.6/</b><br>
+<li><b>/pub/OpenBSD/6.7/</b><br>
 	Где можно найти последний релиз.
   <ul>
   <li><b>alpha/</b>
@@ -81,8 +81,8 @@ OpenBSD можно скачать через HTTP(s) или FTP.
 <li><b>/pub/OpenBSD/tools/</b><br>
 	Другое различные маленькие вещи.
 <p>
-<li><b>/pub/OpenBSD/6.5/</b><br>
-	Такая же структура каталогов как и для релиза 6.6, описанного выше.
+<li><b>/pub/OpenBSD/6.6/</b><br>
+	Такая же структура каталогов как и для релиза 6.7, описанного выше.
 </ul>
 
 <h3 id="prospective">Информация для планируемых/поддерживаемых зеркал</h3>
@@ -101,7 +101,7 @@ OpenBSD можно скачать через HTTP(s) или FTP.
   <li><strong>свежие (up-to-date) снапшоты</strong> (не старше, чем неделя)
   <li><strong>каталоги для всех проектов</strong>
     <br>(включая OpenSSH/, OpenNTPD/, OpenBGPD/, LibreSSL/, patches/,
-         syspatch/ and tools/)
+         rpki-client/, syspatch/ and tools/)
 </ul>
 
 Также:
