[1.12] sync, 6.7p0 - rpki-client/portable.html

--- a/rpki-client/portable.html
+++ b/rpki-client/portable.html
@@ -16,7 +16,7 @@
 <hr>
 
 <p>
-Портированная версия rpki-client 6.6p2 вышла 19 апреля 2020 года.
+Портированная версия rpki-client 6.7p0 вышла 18 мая 2020 года.
 
 <p>
 Портированная версия rpki-client работает и на нескольких других UNIX системах,
