[1.414] sync, 6.7p0 - openbgpd/ftp.html

--- a/openbgpd/ftp.html
+++ b/openbgpd/ftp.html
@@ -16,8 +16,7 @@
 <hr>
 
 <p>
-Последний релиз портированной версии OpenBGPD 6.6p0 состоялся
-первого ноябрая 2019 года.
+Релиз портированной версии OpenBGPD 6.7p0 состоялся 18 мая 2020 года.
 
 <p>
 Портированная OpenBGPD - это версия/порт для других операционных систем.
