--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <li><a href="https://www.openbsd.org/plus.html">Changelog</a>
         <li><a href="faq/index.html">FAQ</a>
         <li><a href="https://man.openbsd.org">Man-страницы</a>
-        <li><a href="https://www.openbsd.org/errata66.html">Патчи</a>
+        <li><a href="https://www.openbsd.org/errata67.html">Патчи</a>
         <li><a href="report.html">Сообщить об ошибке</a>
         <li><a href="mail.html">Почтовые рассылки</a>
         <li><a href="https://www.openbsd.org/lyrics.html">Песни</a> &amp;
@@ -64,8 +64,8 @@
     </nav>
     <article>
       <h2>
-        <a href="https://www.openbsd.org/66.html">
-        <img src="images/puffy66.gif" height="198" width="599" alt="[OpenBSD 6.6]"></a>
+        <a href="https://www.openbsd.org/67.html">
+        <img src="images/puffy67.gif" height="198" width="599" alt="[OpenBSD 6.7]"></a>
       </h2>
 
       <p id="callout">
@@ -83,8 +83,8 @@
 
       <p>
       Последняя версия,
-      <a href="https://www.openbsd.org/66.html">OpenBSD 6.6</a>,
-      вышла 17 октября 2019 года.
+      <a href="https://www.openbsd.org/67.html">OpenBSD 6.7</a>,
+      вышла 19 мая 2020 года.
 
       <p>
       OpenBSD разрабатывается добровольцами. Процесс разработки, а также
