[1.743] sync - index.html

--- a/index.html
+++ b/index.html
@@ -48,10 +48,8 @@
 
       <header>Поддержка OpenBSD</header>
       <ul>
-        <!--
-        <li><a href="https://openbsdstore.com">Buy OpenBSD Products</a>
-        -->
         <li><a href="https://www.openbsd.org/donations.html">Пожертвования</a><br>
+        <li><a href="https://openbsdstore.com/">Art Merchandise</a>
         <li><a href="https://www.openbsdfoundation.org/"><i>OpenBSD Foundation</i></a>
       </ul>
 
