[1.62] sync, OpenSMTPD 6.7.1p1 - opensmtpd/index.html

--- a/opensmtpd/index.html
+++ b/opensmtpd/index.html
@@ -40,10 +40,12 @@
 
       <p id="callout">
         Релиз
-        <a href="https://www.opensmtpd.org/announces/release-6.7.0p1.txt">OpenSMTPD 6.7.0p1</a>
-        состоялся 19 мая 2020 года<br>
-        <a href="https://www.opensmtpd.org/archives/opensmtpd-6.7.0p1.tar.gz">Портированная версия</a>
-       [<a href="https://www.opensmtpd.org/archives/opensmtpd-6.7.0p1.sum.sig">sha256</a>]
+        <a href="https://www.opensmtpd.org/announces/release-6.7.0p1.txt">OpenSMTPD 6.7</a>
+        состоялся 19 мая 2020 года.<br>
+        Последний minor релиз:
+        <a href="https://www.opensmtpd.org/archives/opensmtpd-6.7.1p1.tar.gz">OpenSMTPD 6.7.1p1</a>
+       [<a href="https://www.opensmtpd.org/archives/opensmtpd-6.7.1p1.sum.sig">sha256</a>]
+        состялся 21 мая 2020 года.
 
 <p>
 OpenSMTPD представляет из себя <strong>СВОБОДНУЮ</strong> реализацию серверной
