[1.351] OpenSSH 8.3 - openssh/index.html

--- a/openssh/index.html
+++ b/openssh/index.html
@@ -53,8 +53,8 @@
       </h1>
 
       <p id="callout">
-        Релиз <a href="https://www.openbsd.org/openssh/txt/release-8.2">OpenSSH 8.2</a>
-	состоялся 14 февраля 2020 года.<br>
+      Релиз <a href="https://www.openbsd.org/openssh/txt/release-8.3">OpenSSH 8.3</a>
+      состоялся 27 мая 2020 года.<br>
 <p>
 OpenSSH это основной инструмент для создания соединений по протоколу SSH.
 Он шифрует весь трафик, что исключает прослушивание, захват соединений,
