--- a/libressl/index.html
+++ b/libressl/index.html
@@ -56,6 +56,7 @@
 
     <p>
     Последним stable релизом является 3.1.2.<br>
+    Последним development релизом является 3.2.0.<br>
     Больше информации можно найти на странице <a href="releases.html">доступных версий</a>.
 
     <p>
