[1.543] sync - faq/index.html

--- a/faq/index.html
+++ b/faq/index.html
@@ -161,22 +161,24 @@ OpenBSD, так и <a href="http://www.openbsd.org/cgi-bin/man.cgi">онлайн
 <li><a href="faq11.html#CustomizingX">Настройка X</a>
 </ul>
 
-<!-- XXXrelease needs updating for 6.7
-<h3><a href="faq13.html">Мультимедия</a></h3>
+<h3><a href="https://www.openbsd.org/faq/faq13.html">Multimedia</a></h3>
 <ul>
-<li><a href="faq13.html#confaudio"  >Конфигурация аудио устройств</a>
-<li><a href="faq13.html#playaudio"  >Воспроизведение различных форматов аудио</a>
-<li><a href="faq13.html#playCD"     >Воспроизведение аудио CD</a>
-<li><a href="faq13.html#recordaudio">Запись аудио</a>
-<li><a href="faq13.html#recordmon"  >Recording a Monitor Mix of All Audio Playback</a>
-<li><a href="faq13.html#audioserver">Аудио-сервер OpenBSD (sndiod)</a>
-<li><a href="faq13.html#audioprob"  >Отрадка проблем со звуком</a>
-<li><a href="faq13.html#midi"       >Использование MIDI инструментов</a>
-<li><a href="faq13.html#playDVD"    >Воспроизведение DVD</a>
-<li><a href="faq13.html#burnCD"     >Запись CD и DVD</a>
-<li><a href="faq13.html#plugins"    >Плагины для браузера (Java и Flash)</a>
+<li><a href="https://www.openbsd.org/faq/faq13.html#enablerec"  >Enabling Audio Recording</a>
+<li><a href="https://www.openbsd.org/faq/faq13.html#confaudio"  >Configuring Audio Hardware</a>
+<li><a href="https://www.openbsd.org/faq/faq13.html#audiolevel" >Adjusting Audio Levels</a>
+<li><a href="https://www.openbsd.org/faq/faq13.html#usbaudio"   >Using a USB Audio Interface</a>
+<li><a href="https://www.openbsd.org/faq/faq13.html#playaudio"  >Playing Audio Files</a>
+<!-- XXX
+<li><a href="https://www.openbsd.org/faq/faq13.html#playCD"     >Playing Audio CDs</a>
+XXX  -->
+<li><a href="https://www.openbsd.org/faq/faq13.html#recordaudio">Recording Audio Files</a>
+<li><a href="https://www.openbsd.org/faq/faq13.html#recordmon"  >Recording a Monitor Mix of All Audio Playback</a>
+<li><a href="https://www.openbsd.org/faq/faq13.html#audiolat"   >Lowering Audio Latency</a>
+<li><a href="https://www.openbsd.org/faq/faq13.html#audionet"   >Using Remote Audio Hardware</a>
+<li><a href="https://www.openbsd.org/faq/faq13.html#default"    >Choosing the Default Audio Device</a>
+<li><a href="https://www.openbsd.org/faq/faq13.html#audioprob"  >Debugging Audio Problems</a>
+<li><a href="https://www.openbsd.org/faq/faq13.html#midi"       >Using MIDI Instruments</a>
 </ul>
--->
 
 <h3><a href="faq16.html">Виртуализация</a></h3>
 <ul>
