--- a/faq/faq17.html
+++ b/faq/faq17.html
@@ -152,7 +152,7 @@ ikev2 'server1_rsa' passive esp \
 ikev2 'server2_rsa' active esp \
         from 10.0.2.0/24 to 10.0.1.0/24 \
         peer 192.0.2.1 \
-        dstid server2.domain
+        srcid server2.domain
 </pre>
 
 Использование
@@ -258,7 +258,7 @@ ikev2 'server2_rsa' active esp \
         from 10.0.2.0/24 to 192.0.2.1 \
         from 198.51.100.1 to 10.0.1.0/24 \
         peer 192.0.2.1 \
-        dstid server2.domain
+        srcid server2.domain
 </pre>
 
 <h2 id="clientikev2"></h2>
