[1.571] sync - openssh/portable.html

--- a/openssh/portable.html
+++ b/openssh/portable.html
@@ -51,7 +51,7 @@
 
 <p id="downloads">
 В следующих файлах описывается процесс разработки портированной версии OpenSSH.
-Файлы релизов подписаны открытым PGP-ключом, содержащийся в файле
+Файлы релизов подписаны открытым PGP-ключом, содержащемся в файле
 <a href="https://ftp.openbsd.org/pub/OpenBSD/OpenSSH/RELEASE_KEY.asc">RELEASE_KEY.asc</a>,
 доступном на FTP сервере.
 Этот ключ также доступны через <a href="http://www.keyserver.net/">key server network</a>.
