--- a/openntpd/portable.html
+++ b/openntpd/portable.html
@@ -17,7 +17,7 @@
 
 <p>
 Портированная версия OpenNTPD работает и на нескольких других UNIX
-системах, благодаря добавленния необходимого уровня совместимости
+системах, благодаря добавленнию необходимого уровня совместимости
 и поддержке autotool. При этом был использован опыт, полученный при
 портировнии <a href="../openssh/index.html">OpenSSH</a> и
 <a href="../libressl/index.html">LibreSSL</a>.
