[1.105] sync, LibreSSL 3.1.3 - libressl/index.html

--- a/libressl/index.html
+++ b/libressl/index.html
@@ -39,7 +39,8 @@
       </h1>
 
       <p id="callout">
-        <a href="https://ftp.openbsd.org/pub/OpenBSD/LibreSSL/libressl-3.1.2-relnotes.txt">LibreSSL 3.1.2</a> вышла 20 мая 2020 года
+        <a href="https://ftp.openbsd.org/pub/OpenBSD/LibreSSL/libressl-3.1.3-relnotes.txt">LibreSSL 3.1.3</a>
+        вышла 15 июня 2020 года
     
     <p>
     LibreSSL представляет из себя криптографический TLS-стек, возникший
@@ -55,7 +56,7 @@
     ОС (Linux, FreeBSD, Windows, и.т.д.).
 
     <p>
-    Последним stable релизом является 3.1.2.<br>
+    Последним stable релизом является 3.1.3.<br>
     Последним development релизом является 3.2.0.<br>
     Больше информации можно найти на странице <a href="releases.html">доступных версий</a>.
 
