[1.3] sync - openiked/manual.html

--- a/openiked/manual.html
+++ b/openiked/manual.html
@@ -11,14 +11,15 @@
 <h2 id=OpenBSD>
 <a href="index.html">
 <i>Open</i><b>IKED</b></a>
-man-cтраницы
+man-страницы
 </h2>
 <hr>
 
 <p>
 Страницы руководста (или просто man-страницы) доступны как в web,
 так и в самой <a href="https://openbsd-ru.github.io">OpenBSD</a>.
-Эти man-страницы относятся к последней разрабатываемой версии OpenIKED.
+Информация из этих man-страниц относятся к последней разрабатываемой
+версии OpenIKED.
 
 <ul>
 <li><a href="https://man.openbsd.org/iked.8">iked</a>
@@ -30,5 +31,5 @@ man-cтраницы
 </ul>
 
 <p>
-Протокол IKEv2 реализован в OpenIKED в точности как же как он и описан
+Протокол IKEv2 реализован в OpenIKED в точности как же как он описан и
 в стандарте <a href="https://www.ietf.org/rfc/rfc5996.txt">RFC 5996</a>.
