[1.14] sync cvs, EN - openssh/legacy.html

--- a/openssh/legacy.html
+++ b/openssh/legacy.html
@@ -29,12 +29,10 @@ parameters to the other. These are, with the corresponding
 
 <ul>
 <li><code>KexAlgorithms</code>: the key exchange methods that are used to generate
-per-connection keys
+<li><code>HostkeyAlgorithms</code>: the public key algorithms accepted for a SSH server to authenticate itself to a ssh client.
 <li><code>Ciphers</code>: the ciphers to encrypt the connection
 <li><code>MACs</code>: the message authentication codes used to detect traffic
 modification
-<li><code>PubkeyAcceptedKeyTypes</code>: the public key algorithms that the server
-can use to authenticate itself to the client
 </ul>
 
 <p>
@@ -59,8 +57,28 @@ but does not enable it by default because is weak and within theoretical
 range of the so-called Logjam attack.
 
 <p>
+Several related options come into play later during user authentication.
+<ul>
+<li><code>PubkeyAcceptedKeyTypes</code> (ssh/sshd): the public key
+algorithms that will be attempted by the client, and accepted by the server
+for public-key authentication (e.g. via <code>.ssh/authorized_keys</code>).
+<li><code>HostbasedKeyTypes</code> (ssh) and <code>HostbasedAcceptedKeyTypes</code> (sshd): the key types that will be attempted by the client, and accepted by
+the server for host-based authentication (.e.g. via <code>.rhosts</code> or
+<code>.shosts</code>).
+</ul>
+
+<p>
+A mismatch between the client and server during authentication will cause
+authentication to fail, despite it appearing to be configured. For example,
+a <code>ssh-dss</code> user key may be listed in
+<code>.ssh/authorized_keys</code> but may not pass authentication because,
+by default, sshd does not accept this key type.
+</p>
+
+<p>
 The best resolution for these failures is to upgrade the software at
-the other end. OpenSSH only disables algorithms that we actively
+the other end and/or replace the weak key types with safer modern types.
+OpenSSH only disables algorithms that we actively
 recommend against using because they are known to be weak. In
 some cases, this might not be immediately possible so you may need to
 temporarily re-enable the weak algorithms to retain access.
