[1.536] sync - faq/faq4.html

--- a/faq/faq4.html
+++ b/faq/faq4.html
@@ -531,6 +531,7 @@ $ <b>(dmesg; sysctl hw.sensors) > ~/dmesg.txt</b>
 </ul>
 
 <h2 id="Multibooting">Мультизагрузка</h2>
+<!-- XXXrelease - fix GRUB vs GPT; test and update Windows section -->
 
 Мультизагрузка подразумевает использование на одном компьютере нескольких ОС,
 а также средства выбора нужной из них при загрузке.
@@ -551,8 +552,9 @@ $ <b>(dmesg; sysctl hw.sensors) > ~/dmesg.txt</b>
 
 <h3>Загрузчики (Boot Loaders)</h3>
 
-На Mac должен работать без проблем
-<a href="http://www.rodsbooks.com/refind/">rEFInd</a>.
+На Mac и на других системах с UEFI
+<a href="http://www.rodsbooks.com/refind/">rEFInd</a>
+должен работать без проблем.
 
 <p>
 Вы можете настроить загрузку обоих систем при помощи
